--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My diplome</title>
+  <title>My work by GitHub</title>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
